logs/trytond-sentry.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Genshi-0.7.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/genshi'...
Listing './lib/python3.5/site-packages/genshi/filters'...
Listing './lib/python3.5/site-packages/genshi/filters/tests'...
Listing './lib/python3.5/site-packages/genshi/template'...
Listing './lib/python3.5/site-packages/genshi/template/tests'...
Listing './lib/python3.5/site-packages/genshi/template/tests/templates'...
Listing './lib/python3.5/site-packages/genshi/tests'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/polib-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_sql-0.9.dist-info'...
Listing './lib/python3.5/site-packages/raven'...
Listing './lib/python3.5/site-packages/raven/conf'...
Listing './lib/python3.5/site-packages/raven/contrib'...
Listing './lib/python3.5/site-packages/raven/contrib/awslambda'...
Listing './lib/python3.5/site-packages/raven/contrib/bottle'...
Listing './lib/python3.5/site-packages/raven/contrib/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django'...
Listing './lib/python3.5/site-packages/raven/contrib/django/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/django/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/pylons'...
Listing './lib/python3.5/site-packages/raven/contrib/tornado'...
Listing './lib/python3.5/site-packages/raven/contrib/webpy'...
Listing './lib/python3.5/site-packages/raven/contrib/zconfig'...
Listing './lib/python3.5/site-packages/raven/contrib/zerorpc'...
Listing './lib/python3.5/site-packages/raven/contrib/zope'...
Listing './lib/python3.5/site-packages/raven/data'...
Compiling './lib/python3.5/site-packages/raven/deprecation.py'...
***   File "./lib/python3.5/site-packages/raven/deprecation.py", line 6
    def __init__(self, dsn, *args, **kwargs):
                                            ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/raven/handlers'...
Listing './lib/python3.5/site-packages/raven/scripts'...
Listing './lib/python3.5/site-packages/raven/transport'...
Listing './lib/python3.5/site-packages/raven/utils'...
Listing './lib/python3.5/site-packages/raven/utils/serializer'...
Listing './lib/python3.5/site-packages/raven-6.4.0.dist-info'...
Listing './lib/python3.5/site-packages/relatorio'...
Listing './lib/python3.5/site-packages/relatorio/templates'...
Listing './lib/python3.5/site-packages/relatorio/tests'...
Listing './lib/python3.5/site-packages/relatorio/tests/templates'...
Listing './lib/python3.5/site-packages/relatorio-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sql'...
Listing './lib/python3.5/site-packages/sql/tests'...
Listing './lib/python3.5/site-packages/trytond'...
Listing './lib/python3.5/site-packages/trytond/backend'...
Listing './lib/python3.5/site-packages/trytond/backend/mysql'...
Listing './lib/python3.5/site-packages/trytond/backend/postgresql'...
Listing './lib/python3.5/site-packages/trytond/backend/sqlite'...
Listing './lib/python3.5/site-packages/trytond/ir'...
Compiling './lib/python3.5/site-packages/trytond/ir/attachment.py'...
***   File "./lib/python3.5/site-packages/trytond/ir/attachment.py", line 147
    os.makedirs(directory, 0770)
                              ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/trytond/ir/locale'...
Listing './lib/python3.5/site-packages/trytond/ir/module'...
Listing './lib/python3.5/site-packages/trytond/ir/ui'...
Listing './lib/python3.5/site-packages/trytond/ir/ui/icons'...
Compiling './lib/python3.5/site-packages/trytond/ir/ui/view.py'...
***   File "./lib/python3.5/site-packages/trytond/ir/ui/view.py", line 160
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/trytond/ir/view'...
Listing './lib/python3.5/site-packages/trytond/model'...
Listing './lib/python3.5/site-packages/trytond/model/fields'...
Compiling './lib/python3.5/site-packages/trytond/model/modelsql.py'...
***   File "./lib/python3.5/site-packages/trytond/model/modelsql.py", line 461
    except DatabaseIntegrityError, exception:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trytond/model/modelstorage.py'...
***   File "./lib/python3.5/site-packages/trytond/model/modelstorage.py", line 1511
    except KeyError, exception:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/trytond/modules'...
Listing './lib/python3.5/site-packages/trytond/protocols'...
Compiling './lib/python3.5/site-packages/trytond/protocols/common.py'...
***   File "./lib/python3.5/site-packages/trytond/protocols/common.py", line 14
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trytond/protocols/jsonrpc.py'...
***   File "./lib/python3.5/site-packages/trytond/protocols/jsonrpc.py", line 166
    ConcurrencyException), exception:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trytond/protocols/webdav.py'...
***   File "./lib/python3.5/site-packages/trytond/protocols/webdav.py", line 184
    except (DAV_Error, DAV_NotFound, DAV_Secret, DAV_Forbidden), exception:
                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trytond/protocols/xmlrpc.py'...
***   File "./lib/python3.5/site-packages/trytond/protocols/xmlrpc.py", line 166
    except (NotLogged, ConcurrencyException), exception:
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/trytond/report'...
Listing './lib/python3.5/site-packages/trytond/res'...
Listing './lib/python3.5/site-packages/trytond/res/locale'...
Listing './lib/python3.5/site-packages/trytond/res/view'...
Compiling './lib/python3.5/site-packages/trytond/server.py'...
***   File "./lib/python3.5/site-packages/trytond/server.py", line 121
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/trytond/tests'...
Compiling './lib/python3.5/site-packages/trytond/tests/test_modelsql.py'...
***   File "./lib/python3.5/site-packages/trytond/tests/test_modelsql.py", line 37
    except UserError, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/trytond/tools'...
Listing './lib/python3.5/site-packages/trytond/webdav'...
Listing './lib/python3.5/site-packages/trytond/webdav/locale'...
Listing './lib/python3.5/site-packages/trytond/webdav/view'...
Listing './lib/python3.5/site-packages/trytond/wizard'...
Listing './lib/python3.5/site-packages/trytond-3.6.19.egg-info'...
Listing './lib/python3.5/site-packages/trytond_sentry'...
Listing './lib/python3.5/site-packages/trytond_sentry-3.6.0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
